Fix deprecated URL constructor (use URI.toURL instead)